--- a/01_eda.ipynb
+++ b/01_eda.ipynb
@@ -1,22 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9c39e1fd-505e-4ab9-962d-b9aedf192fed",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
    "source": [
-    "# Exploratory Data Analysis (EDA) – Predictive Maintenance\n",
+    "## Exploratory Data Analysis (EDA) – Predictive Maintenance\n",
     "\n",
-    "## Objective\n",
-    "The goal of this notebook is to explore and understand the machine sensor dataset used for predictive maintenance. \n",
+    "#Objective\n",
+    "The aim of this notebook is to explore and understand the machine sensor dataset used for predictive maintenance. \n",
     "We aim to identify data quality issues, understand feature distributions, and analyze the target variable before building a machine learning model.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "4c08edac-b60d-4dd8-814b-37155a6f7573",
    "metadata": {},
    "outputs": [],
@@ -28,11 +28,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "d55e85be-96db-40ea-b1f6-2ff0231101a8",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Dataset Loading\n",
     "\n",
@@ -41,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "cabf4001-8d62-4853-ad04-177666028667",
    "metadata": {},
    "outputs": [],
@@ -52,11 +50,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0b0a5624-f11e-4639-a1cd-b226ed282582",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Initial Data Inspection\n",
     "\n",
@@ -69,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "eabd6a22-e97a-411a-b798-88bfbc215603",
    "metadata": {},
    "outputs": [
@@ -223,7 +219,7 @@
        "4    0    0    0    0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "102cf514-9162-473e-bd64-a0871de1ff68",
    "metadata": {},
    "outputs": [
@@ -245,7 +241,7 @@
        "(10000, 14)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ba3a7004-8b0c-4832-af2a-e31274087b0f",
    "metadata": {},
    "outputs": [
@@ -294,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "475a7f06-1998-4b86-b55f-b6c127f91e80",
    "metadata": {},
    "outputs": [
@@ -318,7 +314,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,11 +324,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "eb90f9a6-4cb7-4212-9eed-0d7eca39b892",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Missing Values\n",
     "\n",
@@ -342,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b1e577c9-8a9d-48c2-8195-e9cb250a7337",
    "metadata": {},
    "outputs": [
@@ -352,7 +346,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "dca28447-8d4e-43cf-9c9c-c77e5beff880",
    "metadata": {},
    "outputs": [
@@ -559,7 +553,7 @@
        "max        1.000000      1.000000      1.000000      1.000000      1.00000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0e321f2a-bf56-42a9-afe0-52d14231fa3e",
    "metadata": {},
    "outputs": [
@@ -598,7 +592,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,11 +602,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f0261506-c427-46ba-a15c-f265babc0693",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Observation\n",
     "\n",
@@ -622,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3b3de6fc-e92a-45d1-8cca-098486281b32",
    "metadata": {},
    "outputs": [
@@ -644,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "373c29f6-60bb-4a5c-b773-3b621f60ada4",
    "metadata": {},
    "outputs": [
@@ -666,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "dec1fd3d-572f-4449-9bef-7111875f6a81",
    "metadata": {},
    "outputs": [
@@ -688,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "2a9fbdcf-f0e4-4c29-81cb-84c9dcf2fe05",
    "metadata": {},
    "outputs": [
@@ -713,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "82808b73-48e1-4bb0-9438-dfeaabd61128",
    "metadata": {},
    "outputs": [
@@ -726,7 +718,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "0c3eb970-d5cb-479c-8efc-df8672a17c04",
    "metadata": {},
    "outputs": [
@@ -864,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "bba4e69d-7b45-4c77-9a79-6fd63295983b",
    "metadata": {},
    "outputs": [
@@ -877,7 +869,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "cf03fac7-8be1-45fc-9ed9-ca5d1613c53e",
    "metadata": {},
    "outputs": [
@@ -915,35 +907,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "0792141a-0f2b-4900-9734-def942e65aa6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Machine failure\n",
-       "0    0.9661\n",
-       "1    0.0339\n",
-       "Name: proportion, dtype: float64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "failure_ratio = df[\"Machine failure\"].value_counts(normalize=True)\n",
     "failure_ratio\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1b14d02c-d27d-41e3-aefe-982700e771b4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Final EDA Summary\n",
     "\n",
@@ -957,28 +933,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "be428f5a-e0d6-46f6-a499-1f163b8d870e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop('Machine failure', axis=1)\n",
-    "y = df['Machine failure']\n"
+    "X = df.drop(['Machine failure', 'UDI', 'Product ID'], axis=1)\n",
+    "y = df['Machine failure']\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "bb50db65-4a84-4457-9699-cbf4d069f288",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = X.drop(['UDI', 'Product ID'], axis=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "998633c9-80dd-4af2-afa4-cc486213b1e2",
    "metadata": {},
    "outputs": [],
@@ -988,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "1c1b9ccb-d86d-4441-b80a-8c7fd1b1c9b7",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "c0651260-fe79-4577-a878-93597a69dbbe",
    "metadata": {},
    "outputs": [],
@@ -1015,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "3908c408-2b23-4d93-a462-550dd2b6bae8",
    "metadata": {},
    "outputs": [
@@ -1707,7 +1675,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "02ba446c-7b9c-4f4e-bf94-06f84f5b1c84",
    "metadata": {},
    "outputs": [],
@@ -1731,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "id": "203606de-7cfd-4139-b550-c43fb27396c3",
    "metadata": {},
    "outputs": [
@@ -1741,7 +1709,7 @@
        "0.999"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "1c04a3d0-91d3-47aa-8589-5e9547c5d102",
    "metadata": {},
    "outputs": [
@@ -1776,26 +1744,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "bfef1da3-ba55-4521-9577-5372cfaa757f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00      1939\n",
-      "           1       1.00      0.97      0.98        61\n",
-      "\n",
-      "    accuracy                           1.00      2000\n",
-      "   macro avg       1.00      0.98      0.99      2000\n",
-      "weighted avg       1.00      1.00      1.00      2000\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
@@ -1804,55 +1756,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "e173862b-d4d5-4e73-bc60-f69022a54f5f",
+   "execution_count": 26,
+   "id": "c06f6239-91d4-41a2-9bdf-8bbdd779e19d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_prob = model.predict_proba(X_test)\n"
+    "y_prob = model.predict_proba(X_test)[:, 1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "208949f0-6375-4cdf-b362-b721837e17c7",
+   "execution_count": 27,
+   "id": "62ccedbd-747f-4ff5-b9b3-8093f72209a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix (0.5):\n",
+      "[[1939    0]\n",
+      " [   2   59]]\n",
+      "\n",
+      "Confusion Matrix (0.3):\n",
+      "[[1939    0]\n",
+      " [   2   59]]\n"
+     ]
+    }
+   ],
    "source": [
-    "failure_prob = y_prob[:, 1]\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
+    "# Threshold 0.5\n",
+    "y_pred_05 = (y_prob >= 0.5).astype(int)\n",
+    "cm_05 = confusion_matrix(y_test, y_pred_05)\n",
     "\n",
-    "\n"
+    "# Threshold 0.3\n",
+    "y_pred_03 = (y_prob >= 0.3).astype(int)\n",
+    "cm_03 = confusion_matrix(y_test, y_pred_03)\n",
+    "\n",
+    "print(\"Confusion Matrix (0.5):\")\n",
+    "print(cm_05)\n",
+    "\n",
+    "print(\"\\nConfusion Matrix (0.3):\")\n",
+    "print(cm_03)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "faad3f71-683e-4b91-87ac-0e8631f6c536",
+   "execution_count": 28,
+   "id": "331fb9e9-ea03-4b1f-8039-72259cbcb293",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([8.94911898e-04, 1.50978539e-03, 1.34644949e-03, ...,\n",
-       "       1.13261619e-03, 9.95715272e-01, 1.69662979e-03], shape=(2000,))"
+       "array([[1939,    0],\n",
+       "       [   2,   59]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "failure_prob\n"
+    "y_pred_09 = (y_prob >= 0.9).astype(int)\n",
+    "confusion_matrix(y_test, y_pred_09)\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "16d10827-7c0c-4c4f-9b62-dc84a92736f3",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e14bde8-4b99-431c-b6b5-9f8f13163826",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "failure_prob.min(), failure_prob.max()\n"
+    "#\n",
+    "Threshold variation between 0.3 and 0.9 did not affect model performance.\n",
+    "The confusion matrices remained identical across these thresholds.\n",
+    "This indicates that the model produces highly confident predictions, with predicted probabilities either very close to 0 (no failure) or very close to 1 (failure). There is minimal overlap between the two classes, which explains why adjusting the threshold within this range does not change the classification results.\n",
+    "This suggests strong class separability in the dataset.\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9f4fe94-39a3-403a-b1e9-db6a059d8646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Final Conclusion & Business Interpretation\n",
+    "The predictive maintenance model demonstrates strong class separability and high predictive confidence. The model successfully distinguishes between failure and non-failure conditions using machine sensor data.\n",
+    "The system can be integrated into a real-time monitoring pipeline to generate machine failure risk scores. By continuously analyzing operational sensor inputs, the model can support proactive maintenance scheduling.\n",
+    "Additionally, adjusting the decision threshold based on business risk tolerance allows organizations to balance maintenance costs and operational reliability. Lower thresholds may reduce the risk of missed failures, while higher thresholds can minimize unnecessary maintenance interventions."
    ]
   }
  ],
